--- a/pms/views/pms_team_views.xml
+++ b/pms/views/pms_team_views.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <record id="pms_team_view_form" model="ir.ui.view">
         <field name="name">pms.team.form</field>
@@ -6,37 +6,64 @@
         <field name="arch" type="xml">
             <form string="PMS Team">
                 <sheet>
-                    <div class="oe_button_box" name="button_box"/>
-                    <widget name="web_ribbon" title="Archived" bg_color="bg-danger" attrs="{'invisible': [('active', '=', True)]}"/>
+                    <div class="oe_button_box" name="button_box" />
+                    <widget
+                        name="web_ribbon"
+                        title="Archived"
+                        bg_color="bg-danger"
+                        attrs="{'invisible': [('active', '=', True)]}"
+                    />
                     <div class="oe_title">
-                        <label for="name" class="oe_edit_only" string="PMS Team"/>
+                        <label for="name" class="oe_edit_only" string="PMS Team" />
                         <h1>
-                            <field name="name" placeholder="PMS Team name..."/>
+                            <field name="name" placeholder="PMS Team name..." />
                         </h1>
                         <div name="options_active" />
                     </div>
                     <group>
                         <group name="left">
-                            <field name="active"/>
-                            <field name="user_id" domain="[('share', '=', False)]"/>
-                            <field name="pms_property_id" options="{'no_create': True}"/>
+                            <field name="active" />
+                            <field name="user_id" domain="[('share', '=', False)]" />
+                            <field
+                                name="pms_property_id"
+                                options="{'no_create': True}"
+                            />
                         </group>
                         <group name="right">
                         </group>
                     </group>
                     <notebook>
-                        <page name="members" string="Team Members" >
-                            <field name="member_ids" widget="many2many" options="{'not_delete': True}">
-                                <kanban quick_create="false" create="true" delete="true">
-                                    <field name="id"/>
-                                    <field name="name"/>
+                        <page name="members" string="Team Members">
+                            <field
+                                name="member_ids"
+                                widget="many2many"
+                                options="{'not_delete': True}"
+                            >
+                                <kanban
+                                    quick_create="false"
+                                    create="true"
+                                    delete="true"
+                                >
+                                    <field name="id" />
+                                    <field name="name" />
                                     <templates>
                                         <t t-name="kanban-box">
-                                            <div class="oe_kanban_global_click" style="max-width: 200px">
+                                            <div
+                                                class="oe_kanban_global_click"
+                                                style="max-width: 200px"
+                                            >
                                                 <div class="o_kanban_record_top">
-                                                    <img t-att-src="kanban_image('res.users', 'image_128', record.id.raw_value)" class="oe_avatar oe_kanban_avatar_smallbox o_image_40_cover mb0" alt="Avatar"/>
-                                                    <div class="o_kanban_record_headings ml8">
-                                                        <strong class="o_kanban_record_title"><field name="name"/></strong>
+                                                    <img
+                                                        t-att-src="kanban_image('res.users', 'image_128', record.id.raw_value)"
+                                                        class="oe_avatar oe_kanban_avatar_smallbox o_image_40_cover mb0"
+                                                        alt="Avatar"
+                                                    />
+                                                    <div
+                                                        class="o_kanban_record_headings ml8"
+                                                    >
+                                                        <strong
+                                                            class="o_kanban_record_title"
+                                                        ><field name="name" /></strong>
                                                     </div>
                                                 </div>
                                             </div>
@@ -48,8 +75,11 @@
                     </notebook>
                 </sheet>
                 <div class="oe_chatter">
-                    <field name="message_follower_ids" help="Follow this team to automatically track the events associated to users of this team."/>
-                    <field name="message_ids"/>
+                    <field
+                        name="message_follower_ids"
+                        help="Follow this team to automatically track the events associated to users of this team."
+                    />
+                    <field name="message_ids" />
                 </div>
             </form>
         </field>
@@ -61,11 +91,11 @@
         <field name="field_parent">child_ids</field>
         <field name="arch" type="xml">
             <tree string="PMS Team" sample="1" multi_edit="1">
-                <field name="sequence" widget="handle"/>
-                <field name="name" readonly="1"/>
-                <field name="active" invisible="1"/>
-                <field name="user_id" domain="[('share', '=', False)]"/>
-                <field name="pms_property_id"/>
+                <field name="sequence" widget="handle" />
+                <field name="name" readonly="1" />
+                <field name="active" invisible="1" />
+                <field name="user_id" domain="[('share', '=', False)]" />
+                <field name="pms_property_id" />
             </tree>
         </field>
     </record>
@@ -80,10 +110,12 @@
                         <div t-attf-class="oe_kanban_content oe_kanban_global_click">
                             <div class="row">
                                 <div class="col-6">
-                                    <strong><field name="name"/></strong>
+                                    <strong><field name="name" /></strong>
                                 </div>
                                 <div class="col-6">
-                                    <span class="float-right"><field name="user_id"/></span>
+                                    <span class="float-right"><field
+                                            name="user_id"
+                                        /></span>
                                 </div>
                             </div>
                         </div>
