--- a/pms/views/res_company_views.xml
+++ b/pms/views/res_company_views.xml
@@ -14,6 +14,9 @@
             <xpath expr="//field[@name='website']" position="after">
                 <field name="url_advert" />
             </xpath>
+            <xpath expr="//field[@name='vat']" position="after">
+                <field name="check_min_partner_data_invoice" />
+            </xpath>
         </field>
     </record>
 </odoo>
