--- a/pms/views/pms_service_line_views.xml
+++ b/pms/views/pms_service_line_views.xml
@@ -9,6 +9,7 @@
                     <field name="product_id" />
                     <field name="day_qty" />
                     <field name="date" />
+                    <field name="sale_channel_id" />
                     <field name="price_unit" />
                     <field
                         name="discount"
@@ -29,6 +30,7 @@
                 <field name="product_id" />
                 <field name="day_qty" />
                 <field name="date" />
+                <field name="sale_channel_id" />
                 <field name="price_unit" />
                 <field
                     name="discount"
