[IMP] pms: add multiple sale channels of services in reservation views

--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -563,6 +563,7 @@
                                             attrs="{'readonly': [('per_day','=',True)]}"
                                             force_save="1"
                                         />
+                                        <field name="sale_channel_origin_id" />
                                         <button
                                             type="object"
                                             class="oe_stat_button"
