--- a/pms/views/pms_folio_views.xml
+++ b/pms/views/pms_folio_views.xml
@@ -488,14 +488,9 @@
                                     <field
                                         name="price_subtotal"
                                         widget="monetary"
-                                        groups="account.group_show_line_subtotals_tax_excluded"
-                                        optional="hide"
+                                        optional="show"
                                     />
-                                    <field
-                                        name="price_total"
-                                        widget="monetary"
-                                        groups="account.group_show_line_subtotals_tax_included"
-                                    />
+                                    <field name="price_total" widget="monetary" />
                                     <field name="state" invisible="1" />
                                     <field name="invoice_status" invisible="1" />
                                     <field name="currency_id" invisible="1" />
