[IMP]pms: added short_name field in rooms and tests

--- a/pms/views/pms_room_views.xml
+++ b/pms/views/pms_room_views.xml
@@ -45,6 +45,7 @@
                                 />
                                 <field name="capacity" />
                                 <field name="extra_beds_allowed" />
+                                <field name="short_name" />
                                 <!-- <field name="uom_id" invisible="1" /> -->
                             </group>
                             <group>
@@ -185,7 +186,7 @@
                 <field name="capacity" />
                 <field name="extra_beds_allowed" />
                 <field name="room_amenity_ids" widget="many2many_tags" />
-
+                <field name="short_name" />
             </tree>
         </field>
     </record>
