--- a/pms/views/pms_property_views.xml
+++ b/pms/views/pms_property_views.xml
@@ -130,6 +130,10 @@
                                                 string="Cancellation Email"
                                                 name="property_canceled_template"
                                             />
+                                            <field
+                                                string="Exit Email"
+                                                name="property_exit_template"
+                                            />
                                         </group>
                                     </div>
                                     <div class="col-6">
@@ -161,6 +165,75 @@
                                 />
                                 <field name="privacy_policy" />
                             </group>
+                        </page>
+                        <page name="members" string="Team Members">
+                            <label for="user_id" string="Team Leader" />
+                            <h3>
+                                <field name="user_id" options="{'no_create': True}" />
+                            </h3>
+                            <field
+                                name="member_ids"
+                                mode="kanban"
+                                context="{'default_pms_property_id': active_id}"
+                            >
+                                <kanban
+                                    on_create="quick_create"
+                                    quick_create_view="pms.pms_team_member_view_form"
+                                    delete="true"
+                                    sample="1"
+                                >
+                                    <field name="id" />
+                                    <field name="name" />
+                                    <field name="user_id" />
+                                    <field name="pms_role" />
+                                    <field name="pms_property_id" invisible="1" />
+                                    <templates>
+                                        <t t-name="kanban-box">
+                                            <div
+                                                class="oe_kanban_global_click"
+                                                style="max-width: 200px"
+                                            >
+                                                <div class="o_kanban_record_top">
+                                                    <img
+                                                        t-att-src="kanban_image('res.users', 'image_128', record.user_id.raw_value)"
+                                                        class="oe_avatar oe_kanban_avatar_smallbox o_image_40_cover mb0"
+                                                        alt="Avatar"
+                                                    />
+                                                    <div class="oe_kanban_content">
+                                                        <div>
+                                                            <strong
+                                                                class="o_kanban_record_title"
+                                                            >
+                                                                <field
+                                                                    name="pms_role"
+                                                                />
+                                                            </strong>
+                                                        </div>
+                                                        <div>
+                                                            <field name="name" />
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="oe_clear" />
+                                            </div>
+                                        </t>
+                                    </templates>
+                                </kanban>
+                                <form string="Member Team">
+                                    <sheet>
+                                        <div class="oe_title">
+                                            <label for="name" />
+                                            <h1>
+                                                <field name="name" />
+                                            </h1>
+                                        </div>
+                                        <group>
+                                            <field name="user_id" />
+                                            <field name="pms_role" />
+                                        </group>
+                                    </sheet>
+                                </form>
+                            </field>
                         </page>
                     </notebook>
                 </sheet>
