--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -44,32 +44,35 @@
                         type="object"
                     />
                     <button
-                        name="action_open_mail_composer"
+                        name="action_open_confirmation_mail_composer"
                         string="Send Confirmation Email "
                         type="object"
-                        attrs="{'invisible':['|','|','|',('to_send_mail', '=', False),('is_modified_reservation', '=', True),('state', 'not in', 'confirm'),('reservation_type', 'in', 'out')]}"
+                        attrs="{'invisible':[('to_send_confirmation_mail', '=', False)]}"
                     />
                     <button
-                        name="action_open_mail_composer"
+                        name="action_open_modification_mail_composer"
                         string="Send Modification Email "
                         type="object"
-                        attrs="{'invisible':['|','|','|',('to_send_mail', '=', False), ('is_modified_reservation', '=', False), ('state', 'in', 'cancel'),('reservation_type', 'in', 'out')]}"
+                        attrs="{'invisible':[('to_send_modification_mail', '=', False)]}"
                     />
                     <button
-                        name="action_open_mail_composer"
+                        name="action_open_exit_mail_composer"
                         string="Send Exit Email "
                         type="object"
-                        attrs="{'invisible':['|','|',('to_send_mail', '=', False), ('state', 'not in', 'done'),('reservation_type', 'in', 'out')]}"
+                        attrs="{'invisible':[('to_send_exit_mail', '=', False)]}"
                     />
                     <button
-                        name="action_open_mail_composer"
+                        name="action_open_cancelation_mail_composer"
                         string="Send Cancellation Email "
                         type="object"
-                        attrs="{'invisible':['|','|',('to_send_mail', '=', False), ('state', 'not in', 'cancel'),('reservation_type', 'in', 'out')]}"
+                        attrs="{'invisible':[('to_send_cancelation_mail', '=', False)]}"
                     />
+
                     <field name="state" widget="statusbar" />
-                    <field name="to_send_mail" invisible="1" />
-                    <field name="is_modified_reservation" invisible="1" />
+                    <field name="to_send_confirmation_mail" invisible="1" />
+                    <field name="to_send_modification_mail" invisible="1" />
+                    <field name="to_send_exit_mail" invisible="1" />
+                    <field name="to_send_cancelation_mail" invisible="1" />
                 </header>
                 <div
                     class="alert alert-info"
@@ -567,7 +570,11 @@
                                         <field name="price_tax" optional="hide" />
                                         <field name="discount" />
                                         <field name="price_total" />
-                                        <field name="service_line_ids" invisible="1">
+                                        <field
+                                            name="service_line_ids"
+                                            invisible="1"
+                                            readonly="1"
+                                        >
                                             <tree string="Days">
                                                 <field name="date" />
                                                 <field name="day_qty" />
