--- a/pms/views/res_company_views.xml
+++ b/pms/views/res_company_views.xml
@@ -16,6 +16,7 @@
             </xpath>
             <xpath expr="//field[@name='vat']" position="after">
                 <field name="check_min_partner_data_invoice" />
+                <field name="pms_invoice_downpayment_policy" />
             </xpath>
         </field>
     </record>
