[IMP]pms: New company config check to avoid max amount restriction in downpayments simplified invoice

--- a/pms/views/pms_property_views.xml
+++ b/pms/views/pms_property_views.xml
@@ -117,6 +117,7 @@
                                     ]"
                                 />
                                 <field name="max_amount_simplified_invoice" />
+                                <field name="avoid_simplified_max_amount_downpayment" />
                             </group>
                         </page>
                         <page string="Email Configuration">
